--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,11 +1,3 @@
 {
-  "*.{js,ts,jsx,tsx}": [
-    "prettier --write --cache"
-  ],
-  "*.{less,sass,scss,styl,json}": [
-    "prettier --write --cache"
-  ],
-  "*.{json}": [
-    "prettier --write --cache"
-  ]
+	"*": ["prettier --write --ignore-unknown"]
 }
