--- a/package.json
+++ b/package.json
@@ -38,12 +38,10 @@
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.1.1",
 		"simple-git-hooks": "^2.9.0",
-		"typescript": "^5.2.2",
-		"validate-commit-msg": "^2.14.0"
+		"typescript": "^5.2.2"
 	},
 	"simple-git-hooks": {
 		"pre-commit": "pnpm exec lint-staged --concurrent false",
-		"pre-push": "pnpm format",
 		"preserveUnused": ["commit-msg"]
 	},
 	"config": {
