feat: 嵌套子应用菜单，图标自动导入

--- a/main-apps/vitest-react-ts-swc-base/.prettierrc
+++ b/main-apps/vitest-react-ts-swc-base/.prettierrc
@@ -6,6 +6,7 @@
   "useTabs": true,
   "trailingComma": "all",
   "semi": true,
+  "singleAttributePerLine": true,
   "arrowParens": "avoid",
   "bracketSpacing": true,
   "htmlWhitespaceSensitivity": "strict",
