--- a/sub-apps/side-nav/env/.env.staging
+++ b/sub-apps/side-nav/env/.env.staging
@@ -1,12 +1,12 @@
 # 预发环境uat
 VITE_NODE_ENV = staging
-VITE_APP_TITLE = Vite React App(预发环境)
+VITE_APP_TITLE = Vite Vue SideNav(预发环境)
 # 是否预览服务
 VITE_APP_PREVIEW = true
 # 是否mock数据
 VITE_APP_MOCK = false
 # 输出打包路径
-VITE_OUTPUT_DIR = dist/dist_staging
+VITE_OUTPUT_DIR = dist/dist_staging/sub-vite-menu/
 
 # 公共基础路径
 BASE_URL=/
