--- a/main-apps/vitest-react-ts-swc-base/package.json
+++ b/main-apps/vitest-react-ts-swc-base/package.json
@@ -10,10 +10,12 @@
 		"analyze": "source-map-explorer 'dist/assets/*.js'",
 		"preview": "vite preview",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --color --max-warnings 0",
+		"lint-staged": "lint-staged",
 		"format": "prettier --write \"./src/**/*.{ts,tsx,json}\""
 	},
 	"dependencies": {
 		"@ant-design/icons": "^5.3.0",
+		"@micro-zoe/micro-app": "1.0.0-rc.3",
 		"antd": "^5.12.5",
 		"axios-ajax-ts": "workspace:^",
 		"classnames": "^2.5.1",
@@ -38,10 +40,15 @@
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"@vitest/coverage-c8": "^0.33.0",
 		"@vitest/ui": "^1.1.1",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-prettier": "^5.1.2",
+		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"less": "^4.2.0",
 		"lint-staged": "^15.2.0",
+		"postcss": "^8.4.32",
 		"prettier": "^3.1.1",
 		"sass": "^1.69.6",
 		"source-map-explorer": "^2.5.3",
@@ -49,7 +56,10 @@
 		"typescript": "^5.2.2",
 		"vite": "^5.0.8",
 		"vite-plugin-checker": "^0.6.2",
+		"vite-plugin-html": "^3.2.1",
 		"vite-plugin-inject-preload": "^1.3.3",
+		"vite-plugin-mock": "^3.0.0",
+		"vite-plugin-svgr": "^4.2.0",
 		"vite-plugin-webfont-dl": "^3.9.1",
 		"vitest": "^1.1.0"
 	}
