--- a/sub-apps/side-nav/env/.env
+++ b/sub-apps/side-nav/env/.env
@@ -1,5 +1,5 @@
 # 项目标题
-VITE_APP_TITLE = Vite Vue SideNav
+VITE_APP_TITLE = Vite Vue3 SideMenu
 
 # 是否预览服务
 VITE_APP_PREVIEW = false
@@ -7,9 +7,10 @@ VITE_APP_PREVIEW = false
 VITE_APP_MOCK = false
 
 # 公共基础路径
+APP_BASE_ROUTER = /sub-vite-menu/
 BASE_URL = /
 # 端口号
-VITE_PORT = 3081
+VITE_PORT = 8086
 
 # 正式api请求地址
 APP_API_BASE_URL=http://192.168.0.108:8081
@@ -19,3 +20,4 @@ APP_API_AURTH_URL=http://192.168.0.108:3680
 APP_API_WS_URL=ws://127.0.0.1:3603
 # CDN请求包地址
 APP_CDN_URL=https://example.cn
+
