--- a/sub-apps/side-nav/env/.env.production
+++ b/sub-apps/side-nav/env/.env.production
@@ -1,6 +1,6 @@
 # 生产环境
 VITE_NODE_ENV = production
-VITE_APP_TITLE = Vite React App(生产环境)
+VITE_APP_TITLE = Vite Vue SideNav(生产环境)
 
 # 是否预览服务
 VITE_APP_PREVIEW = true
@@ -8,7 +8,7 @@ VITE_APP_PREVIEW = true
 VITE_APP_MOCK = false
 
 # 输出打包路径
-VITE_OUTPUT_DIR=dist/dist_build
+VITE_OUTPUT_DIR = dist/dist_prod/sub-vite-menu/
 
 # 公共基础路径
 BASE_URL = /
