--- a/sub-apps/side-nav/package.json
+++ b/sub-apps/side-nav/package.json
@@ -6,9 +6,11 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vue-tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"lint-staged": "lint-staged"
 	},
 	"dependencies": {
+		"@element-plus/icons-vue": "^2.3.1",
 		"dayjs": "^1.11.10",
 		"element-plus": "^2.4.4",
 		"lodash-es": "^4.17.21",
@@ -19,6 +21,9 @@
 		"vue-router": "^4.2.5"
 	},
 	"devDependencies": {
+		"@iconify-json/ep": "^1.1.14",
+		"@iconify-json/fa": "^1.1.8",
+		"@iconify-json/wi": "^1.1.8",
 		"@rushstack/eslint-patch": "^1.6.1",
 		"@types/lodash-es": "^4.17.12",
 		"@types/mockjs": "^1.0.10",
@@ -33,13 +38,18 @@
 		"eslint-plugin-cypress": "^2.15.1",
 		"eslint-plugin-vue": "^9.19.2",
 		"less": "^4.2.0",
+		"lint-staged": "^15.2.0",
 		"postcss": "^8.4.32",
 		"postcss-preset-env": "^9.3.0",
 		"prettier": "^3.1.1",
 		"sass": "^1.69.6",
 		"start-server-and-test": "^2.0.3",
 		"typescript": "^5.2.2",
+		"unplugin-auto-import": "^0.17.5",
+		"unplugin-icons": "^0.18.5",
+		"unplugin-vue-components": "^0.26.0",
 		"vite": "^5.0.8",
+		"vite-plugin-inspect": "^0.8.1",
 		"vite-plugin-svg-icons": "^2.0.1",
 		"vue-tsc": "^1.8.25"
 	}
