--- a/sub-apps/vitest-vue3-ts-el-app/package.json
+++ b/sub-apps/vitest-vue3-ts-el-app/package.json
@@ -13,9 +13,11 @@
 		"build-only": "vite build",
 		"type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
 		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+		"lint-staged": "lint-staged",
 		"format": "prettier --write src/"
 	},
 	"dependencies": {
+		"@element-plus/icons-vue": "^2.3.1",
 		"axios-ajax-ts": "workspace:^",
 		"crypto-js": "^4.2.0",
 		"dayjs": "^1.11.10",
@@ -64,8 +66,10 @@
 		"typescript": "^5.2.2",
 		"unocss": "^0.58.4",
 		"unplugin-auto-import": "^0.17.5",
+		"unplugin-icons": "^0.18.5",
 		"unplugin-vue-components": "^0.26.0",
 		"vite": "^5.0.8",
+		"vite-plugin-inspect": "^0.8.1",
 		"vite-plugin-svg-icons": "^2.0.1",
 		"vitest": "^1.1.0",
 		"vue-tsc": "^1.8.25"
