--- a/sub-apps/side-nav/.lintstagedrc
+++ b/sub-apps/side-nav/.lintstagedrc
@@ -8,5 +8,9 @@
     "eslint --cache --fix",
     "prettier --parser=vue --write --cache",
     "git add"
+  ],
+  "*.{less,sass,scss,styl,json}": [
+    "prettier --write --cache --ignore-unknown",
+    "git add"
   ]
 }
