--- a/sub-apps/vitest-vue3-ts-el-app/package.json
+++ b/sub-apps/vitest-vue3-ts-el-app/package.json
@@ -35,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@iconify-json/ep": "^1.1.14",
+		"@micro-zoe/micro-app": "1.0.0-rc.3",
 		"@rushstack/eslint-patch": "^1.6.1",
 		"@types/crypto-js": "^4.2.1",
 		"@types/jsdom": "^21.1.6",
