--- a/.commitlintrc
+++ b/.commitlintrc
@@ -7,76 +7,110 @@
       2,
       'always',
       [
-        'bug',
-        'feat',
-        'fix',
-        'docs',
-        'style',
-        'refactor',
-        'test',
-        'chore',
-        'revert',
+        "feat",
+        "fix",
+        "docs",
+        "style",
+        "refactor",
+        "perf",
+        "test",
         'merge',
-        'build',
-        'ci',
-        'perf'
+        "build",
+        "ci",
+        "revert",
+        "chore",
       ]
     ],
-    'type-case': [2, 'always', ['lower-case', 'upper-case']],
-    'type-empty': [0],
-    'scope-empty': [0],
-    'scope-case': [0],
-    'subject-full-stop': [0],
     'subject-case': [0, 'never'],
-    'header-max-length': [0, 'always', 72],
   },
   prompt: {
     'questions': {
       type: {
-        description: '选择你要提交的类型:',
+        description: "选择你要提交的类型 :",
         enum: {
           'feat': {
-            description: '新增/修改功能 (Feature)',
+            description: "特性: 新增/修改功能",
             title: 'Features'
           },
           'fix': {
-            description: '修复相关bug',
+            description: "修复: 修复缺陷bug",
             title: 'Bug Fixes',
           },
           'docs': {
-            description: '文档更改',
+            description: "文档: 文档变更",
             title: 'Documentation',
           },
           'style': {
-            description: '样式更改',
+            description: "格式: 代码格式（不影响功能，例如空格、分号等格式修正）",
             title: 'stylesheet',
           },
           'refactor': {
-            description: '重构or优化',
+            description: "重构: 代码重构/优化（不包括 bug 修复、功能新增）",
             title: 'refactor'
           },
           'chore': {
-            description: '其他修改, 比如改变构建流程、或者增加依赖库、工具等',
+            description: "其他: 对构建过程或辅助工具和库的更改（不影响源文件、测试用例）",
             title: 'chore'
           },
           'ci': {
-              description: '持续集成修改',
+              description: "集成: 修改 CI 配置、脚本",
               title: 'ci'
           },
           'perf': {
-            description: '优化相关，比如提升性能、体验',
+            description: "性能: 性能优化",
             title: 'perf'
           },
           'revert': {
-            description: '回滚到上一个版本',
+            description: "回退: 回滚 commit",
             title: 'revert'
           },
           'test': {
-            description: '测试用例修改',
+            description: "测试: 添加疏漏测试或已有测试改动",
             title: 'test'
           },
+          'merge': {
+            description: "合并: 代码合并",
+            title: 'build'
+          },
+          'build': {
+            description: "构建: 构建流程、外部依赖变更（如升级 npm 包、修改 vite 配置等）",
+            title: 'build'
+          },
         }
-      }
+      },
+      scope: {
+        description: "选择一个提交范围（可选）:",
+      }, 
+      customScope: {
+        description: "请输入自定义的提交范围 :",
+      }, 
+      subject: {
+        description: "填写简短精炼的变更描述 :\n",
+      },
+      body: {
+        description: '填写更加详细的变更描述（可选）。使用 "|" 换行 :\n',
+      },
+      breaking: {
+        description: '列举非兼容性重大的变更（可选）。使用 "|" 换行 :\n',
+      }, 
+      footerPrefixesSelect: {
+        description:  "选择关联issue前缀（可选）:",
+      },
+      customFooterPrefix: {
+        description: "输入自定义issue前缀 :",
+      }, 
+      footer: {
+        description: "列举关联issue (可选) 例如: #31, #I3244 :\n",
+      }, 
+      generatingByAI: {
+        description: "正在通过 AI 生成你的提交简短描述...",
+      }, 
+      generatedSelectByAI: {
+        description: "选择一个 AI 生成的简短描述:",
+      },
+      confirmCommit: {
+        description: "是否提交或修改commit ?",
+      },
     }
   }
 }
