--- a/main-apps/vitest-react-ts-swc-base/package.json
+++ b/main-apps/vitest-react-ts-swc-base/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"start": "npm run build && vite preview",
+		"start": "pnpm build && vite preview",
 		"analyze": "source-map-explorer 'dist/assets/*.js'",
 		"preview": "vite preview",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --color --max-warnings 0",
@@ -37,6 +37,8 @@
 		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
+		"@vitejs/plugin-basic-ssl": "^1.1.0",
+		"@vitejs/plugin-legacy": "^5.2.0",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"@vitest/coverage-c8": "^0.33.0",
 		"@vitest/ui": "^1.1.1",
@@ -50,14 +52,19 @@
 		"lint-staged": "^15.2.0",
 		"postcss": "^8.4.32",
 		"prettier": "^3.1.1",
+		"rollup-plugin-visualizer": "^5.12.0",
 		"sass": "^1.69.6",
 		"source-map-explorer": "^2.5.3",
 		"styled-jsx": "^5.1.2",
 		"typescript": "^5.2.2",
 		"vite": "^5.0.8",
+		"vite-plugin-cdn-import": "^0.3.5",
+		"vite-plugin-cdn2": "^1.1.0",
 		"vite-plugin-checker": "^0.6.2",
+		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-html": "^3.2.1",
 		"vite-plugin-inject-preload": "^1.3.3",
+		"vite-plugin-mkcert": "^1.17.3",
 		"vite-plugin-mock": "^3.0.0",
 		"vite-plugin-svgr": "^4.2.0",
 		"vite-plugin-webfont-dl": "^3.9.1",
