--- a/sub-apps/vite-react-ts-jest-app/package.json
+++ b/sub-apps/vite-react-ts-jest-app/package.json
@@ -6,19 +6,20 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite --config ./viter/vite.config.ts",
-		"dev:local": "run-p dev --mode _local",
-		"testing": "run-p dev --mode testing",
-		"staging": "run-p dev --mode staging",
-		"build:testing": "run-p type-check build-only --mode testing",
-		"build:staging": "run-p tsc-only build-only --mode staging",
-		"build:prod": "run-p tsc -p tsconfig.prod.json build-only",
+		"dev:local": "pnpm dev --mode _local",
+		"testing": "pnpm dev --mode testing",
+		"staging": "pnpm dev --mode staging",
+		"build:testing": "pnpm build-only --mode testing && pnpm type-check",
+		"build:staging": "pnpm build-only --mode staging && pnpm tsc-only",
+		"build:prod": "pnpm build-only --mode production && pnpm tsc-prod",
 		"build-only": "vite build --config ./viter/vite.config.ts",
+		"tsc-prod": "tsc -p ./tsconfig.prod.json",
 		"tsc-only": "tsc --noEmit",
 		"type-check": "tsc --noEmit -p tsconfig.test.json --composite false",
 		"preview": "vite preview --config ./viter/vite.config.ts",
 		"test:unit": "jest",
 		"test:watch": "jest --env=testing --watch",
-		"test:nc": "npm run test:watch --no-cache",
+		"test:nc": "pnpm test:watch --no-cache",
 		"format": "prettier --write --ignore-unknown .",
 		"lint": "eslint --cache . --ext .js,.jsx,ts,tsx --report-unused-disable-directives --max-warnings 0 --fix --ignore-path .gitignore",
 		"lint-staged": "lint-staged",
@@ -56,7 +57,7 @@
 		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
-		"@vitejs/plugin-basic-ssl": "^1.0.2",
+		"@vitejs/plugin-basic-ssl": "^1.1.0",
 		"@vitejs/plugin-legacy": "^5.2.0",
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.16",
@@ -77,7 +78,7 @@
 		"less-vars-to-js": "^1.3.0",
 		"lint-staged": "^15.2.0",
 		"mockjs": "^1.1.0",
-		"npm-run-all": "^4.1.5",
+		"npm-run-all2": "^6.1.1",
 		"postcss": "^8.4.32",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^15.1.0",
@@ -86,12 +87,15 @@
 		"postcss-preset-env": "^9.3.0",
 		"postcss-url": "^10.1.3",
 		"prettier": "^3.1.1",
+		"rollup-plugin-visualizer": "^5.12.0",
 		"sass": "^1.69.6",
+		"terser": "^5.28.1",
 		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.2.2",
 		"vite": "^5.0.8",
 		"vite-plugin-babel-import": "^2.0.5",
+		"vite-plugin-cdn2": "^1.1.0",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-html": "^3.2.1",
 		"vite-plugin-imp": "^2.4.0",
