--- a/main-apps/vitest-react-ts-swc-base/package.json
+++ b/main-apps/vitest-react-ts-swc-base/package.json
@@ -4,14 +4,28 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
+		"start": "pnpm build:staging && vite preview",
 		"dev": "vite",
-		"build": "tsc && vite build",
-		"start": "pnpm build && vite preview",
-		"analyze": "source-map-explorer 'dist/assets/*.js'",
+		"dev:local": "pnpm dev --mode _local",
+		"testing": "pnpm dev --mode testing",
+		"staging": "pnpm dev --mode staging",
+		"build:testing": "pnpm build-only --mode testing && pnpm type-check",
+		"build:staging": "pnpm build-only --mode staging && pnpm tsc-only",
+		"build:prod": "pnpm build-only --mode production && pnpm tsc-prod",
+		"build-only": "vite build",
+		"analyze": "source-map-explorer 'dist/dist_staging/main-vite-react/assets/*.js'",
 		"preview": "vite preview",
+		"tsc-prod": "tsc -p ./tsconfig.prod.json",
+		"tsc-only": "tsc --noEmit",
+		"type-check": "tsc --noEmit -p tsconfig.test.json --composite false",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --color --max-warnings 0",
 		"lint-staged": "lint-staged",
-		"format": "prettier --write \"./src/**/*.{ts,tsx,json}\""
+		"format": "prettier --write \"./src/**/*.{ts,tsx,json}\"",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:cov": "vitest run --coverage",
+		"test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+		"test:e2e": "vitest run --config ./vitest.config.e2e.ts"
 	},
 	"dependencies": {
 		"@ant-design/icons": "^5.3.0",
@@ -26,19 +40,20 @@
 		"react-router-dom": "^6.21.1"
 	},
 	"devDependencies": {
+		"@swc/core": "^1.4.2",
 		"@testing-library/jest-dom": "^6.1.6",
 		"@testing-library/react": "^14.1.2",
 		"@testing-library/react-hooks": "^8.0.1",
 		"@testing-library/user-event": "^14.5.2",
 		"@types/lodash-es": "^4.17.12",
 		"@types/node": "^20.10.5",
+		"@types/postcss-pxtorem": "^6.0.3",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
 		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
 		"@vitejs/plugin-basic-ssl": "^1.1.0",
-		"@vitejs/plugin-legacy": "^5.2.0",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"@vitest/coverage-c8": "^0.33.0",
 		"@vitest/ui": "^1.1.1",
@@ -51,12 +66,14 @@
 		"less": "^4.2.0",
 		"lint-staged": "^15.2.0",
 		"postcss": "^8.4.32",
+		"postcss-pxtorem": "^6.1.0",
 		"prettier": "^3.1.1",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"sass": "^1.69.6",
 		"source-map-explorer": "^2.5.3",
 		"styled-jsx": "^5.1.2",
 		"typescript": "^5.2.2",
+		"unplugin-swc": "^1.4.4",
 		"vite": "^5.0.8",
 		"vite-plugin-cdn-import": "^0.3.5",
 		"vite-plugin-cdn2": "^1.1.0",
@@ -64,10 +81,11 @@
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-html": "^3.2.1",
 		"vite-plugin-inject-preload": "^1.3.3",
+		"vite-plugin-legacy-swc": "^1.0.0",
 		"vite-plugin-mkcert": "^1.17.3",
 		"vite-plugin-mock": "^3.0.0",
 		"vite-plugin-svgr": "^4.2.0",
 		"vite-plugin-webfont-dl": "^3.9.1",
-		"vitest": "^1.1.0"
+		"vitest": "^1.2.2"
 	}
 }
