--- a/main-apps/vitest-react-ts-swc-base/package.json
+++ b/main-apps/vitest-react-ts-swc-base/package.json
@@ -4,7 +4,6 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"start": "pnpm build:staging && vite preview",
 		"dev": "vite",
 		"dev:local": "pnpm dev --mode _local",
 		"testing": "pnpm dev --mode testing",
@@ -57,6 +56,8 @@
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"@vitest/coverage-c8": "^0.33.0",
 		"@vitest/ui": "^1.1.1",
+		"autoprefixer": "^10.4.16",
+		"cssnano": "^6.0.2",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-prettier": "^5.1.2",
@@ -66,6 +67,8 @@
 		"less": "^4.2.0",
 		"lint-staged": "^15.2.0",
 		"postcss": "^8.4.32",
+		"postcss-load-config": "^5.0.3",
+		"postcss-preset-env": "^9.3.0",
 		"postcss-pxtorem": "^6.1.0",
 		"prettier": "^3.1.1",
 		"rollup-plugin-visualizer": "^5.12.0",
