--- a/main-apps/vitest-react-ts-swc-base/tsconfig.json
+++ b/main-apps/vitest-react-ts-swc-base/tsconfig.json
@@ -1,4 +1,13 @@
 {
+	"ts-node": {
+		"swc": true,
+		"esm": true
+		// "transpileOnly": true,
+		// "compilerOptions": {
+		// 	"module": "ESNext",
+		// 	"moduleResolution": "Node16"
+		// }
+	},
 	"compilerOptions": {
 		"target": "ESNext",
 		"module": "ESNext",
@@ -34,5 +43,6 @@
 		"forceConsistentCasingInFileNames": true
 	},
 	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx"],
+	// “项目引用（Project References）” 功能，允许用户为项目的不同部分使用不同的 TypeScript 配置。
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
