--- a/main-apps/vitest-react-ts-swc-base/tsconfig.node.json
+++ b/main-apps/vitest-react-ts-swc-base/tsconfig.node.json
@@ -5,5 +5,6 @@
 		"moduleResolution": "bundler",
 		"allowSyntheticDefaultImports": true
 	},
+	// 说明tscnofig.node.json 是专门用于 vite.config.ts 的 TypeScript 配置文件
 	"include": ["vite.config.ts"]
 }
