--- a/main-apps/vitest-react-ts-swc-base/package.json
+++ b/main-apps/vitest-react-ts-swc-base/package.json
@@ -52,6 +52,9 @@
 		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
+		"@unoCSS/preset-attributify": "npm:@unocss/preset-attributify@^0.58.6",
+		"@unoCSS/preset-icons": "npm:@unocss/preset-icons@^0.58.6",
+		"@unoCSS/preset-uno": "npm:@unocss/preset-uno@^0.58.6",
 		"@vitejs/plugin-basic-ssl": "^1.1.0",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"@vitest/coverage-c8": "^0.33.0",
@@ -76,6 +79,7 @@
 		"source-map-explorer": "^2.5.3",
 		"styled-jsx": "^5.1.2",
 		"typescript": "^5.2.2",
+		"unocss": "^0.58.6",
 		"unplugin-swc": "^1.4.4",
 		"vite": "^5.0.8",
 		"vite-plugin-cdn-import": "^0.3.5",
