--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^9.0.11",
     "koa": "^2.15.0",
     "lint-staged": "^15.2.0",
+    "markdownlint": "^0.33.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.1.1",
     "typescript": "^5.2.2"
