--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,9 @@ packages:
   # all packages of axios request/
   - 'axios-ajax-ts/**'
 
+  # all packages of server/
+  - 'koa-graphql-server/**'
+
   # exclude packages that are inside test directories
   - '!**/tests/**'
   - '!**/cypress/**'
