--- a/sub-apps/vite-react-ts-jest-app/package.json
+++ b/sub-apps/vite-react-ts-jest-app/package.json
@@ -3,7 +3,6 @@
 	"private": true,
 	"version": "0.0.0",
 	"description": "vite 构建react+ts+jest pc端微应用模版",
-	"type": "module",
 	"scripts": {
 		"dev": "vite --config ./viter/vite.config.ts",
 		"dev:local": "pnpm dev --mode _local",
@@ -18,7 +17,9 @@
 		"tsc-prod": "tsc -p ./tsconfig.prod.json",
 		"tsc-only": "tsc --noEmit",
 		"type-check": "tsc --noEmit -p tsconfig.test.json --composite false",
-		"test:unit": "jest",
+		"test:unit": "BABEL_ENV=test && jest --config jest.config.cjs",
+		"test:clear": "jest --clearCache",
+		"test:all": "jest --watchAll",
 		"test:watch": "jest --env=testing --watch",
 		"test:nc": "pnpm test:watch --no-cache",
 		"format": "prettier --write --ignore-unknown .",
@@ -45,13 +46,17 @@
 		"use-immer": "^0.9.0"
 	},
 	"devDependencies": {
+		"@babel/plugin-transform-modules-commonjs": "^7.24.1",
+		"@babel/preset-env": "^7.24.3",
+		"@babel/preset-react": "^7.24.1",
+		"@babel/preset-typescript": "^7.24.1",
 		"@testing-library/jest-dom": "^6.1.6",
-		"@testing-library/react": "^14.1.2",
+		"@testing-library/react": "^14.2.2",
 		"@testing-library/react-hooks": "^8.0.1",
 		"@testing-library/user-event": "^14.5.2",
-		"@types/jest": "^29.5.11",
+		"@types/jest": "^29.5.12",
 		"@types/lodash-es": "^4.17.12",
-		"@types/node": "^20.10.5",
+		"@types/node": "^20.11.30",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
 		"@types/react-router-dom": "^5.3.3",
@@ -62,18 +67,21 @@
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.16",
 		"babel-jest": "^29.7.0",
+		"babel-plugin-transform-import-meta": "^2.2.1",
 		"cssnano": "^6.0.2",
+		"dotenv": "^16.4.5",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jest-dom": "^5.2.0",
 		"eslint-plugin-prettier": "^5.1.2",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
+		"eslint-plugin-testing-library": "^6.2.0",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
-		"jest-watch-typeahead": "^2.2.2",
+		"jest-transformer-svg": "^2.0.2",
 		"less": "^4.2.0",
 		"less-vars-to-js": "^1.3.0",
 		"lint-staged": "^15.2.0",
@@ -90,9 +98,9 @@
 		"rollup-plugin-visualizer": "^5.12.0",
 		"sass": "^1.69.6",
 		"terser": "^5.28.1",
-		"ts-jest": "^29.1.1",
+		"ts-jest": "^29.1.2",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.2.2",
+		"typescript": "^5.4.3",
 		"vite": "^5.0.8",
 		"vite-plugin-babel-import": "^2.0.5",
 		"vite-plugin-cdn2": "^1.1.0",
