--- a/sub-apps/vite-react-ts-jest-app/tsconfig.prod.json
+++ b/sub-apps/vite-react-ts-jest-app/tsconfig.prod.json
@@ -1,4 +1,4 @@
 {
 	"extends": "./tsconfig",
-	"exclude": ["./tests/**", "./mocks/**", "./tests/test-utils"]
+	"exclude": ["./tests/*", "./tests/**", "./mocks/**"]
 }
