build: 构建配置、package和ts配置修改

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "main": "index.js",
   "scripts": {
     "whole:start": "run-p start:base start:react start:nav start:vue3 ",
-    "start:base": "cd ./main-apps/vitest-react-ts-swc-base && pnpm dev",
-    "start:nav": "cd ./sub-apps/side-nav && pnpm dev",
-    "start:vue3": "cd ./sub-apps/vitest-vue3-ts-el-app && pnpm dev",
-    "start:react": "cd ./sub-apps/vite-react-ts-jest-app && pnpm dev",
-    "build:all": "pnpm -r run build",
+    "start:base": "pnpm -C ./main-apps/vitest-react-ts-swc-base dev",
+    "start:nav": "pnpm -C ./sub-apps/side-nav dev",
+    "start:vue3": "pnpm -C ./sub-apps/vitest-vue3-ts-el-app dev",
+    "start:react": "pnpm -C ./sub-apps/vite-react-ts-jest-app dev",
+    "build:all": "pnpm --parallel -r run build",
     "watch": "pnpm --parallel -r run watch",
     "format": "prettier --write --ignore-unknown .",
     "lint-staged": "lint-staged",
