--- a/sub-apps/vitest-vue3-ts-el-app/package.json
+++ b/sub-apps/vitest-vue3-ts-el-app/package.json
@@ -5,13 +5,18 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "run-p type-check \"build-only {@}\" --",
+		"dev:local": "pnpm dev --mode _local",
+		"testing": "pnpm dev --mode testing",
+		"staging": "pnpm dev --mode staging",
+		"build:testing": "pnpm build-only --mode testing && pnpm type-check",
+		"build:staging": "pnpm build-only --mode staging && pnpm tsc-only",
+		"build:prod": "pnpm build-only --mode production && pnpm tsc-prod",
 		"preview": "vite preview",
+		"build-only": "vite build",
+		"type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
 		"test:unit": "vitest",
 		"test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
 		"test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-		"build-only": "vite build",
-		"type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
 		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
 		"lint-staged": "lint-staged",
 		"format": "prettier --write src/"
