--- a/sub-apps/vite-react-ts-jest-app/package.json
+++ b/sub-apps/vite-react-ts-jest-app/package.json
@@ -42,6 +42,7 @@
 		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.2.0",
 		"react-helmet-async": "^2.0.4",
+		"react-konva": "^18.2.10",
 		"react-router-dom": "^6.21.1",
 		"use-immer": "^0.9.0"
 	},
