新增ai问答页面，修改axios请求插件

--- a/sub-apps/vite-react-ts-jest-app/env/.env
+++ b/sub-apps/vite-react-ts-jest-app/env/.env
@@ -9,8 +9,17 @@ VITE_APP_MOCK = false
 # 公共基础路径
 APP_BASE_ROUTER = /sub-vite-react/
 BASE_URL = /
+VITE_BASE_URL = /
 # 端口号
 VITE_PORT = 8081
+
+# APP ID
+APP_AI_DIFY_APP_ID =
+# APP API key
+APP_AI_DIFY_APP_KEY = app-kQVNz2gZEaj4iqalLAHt74mT
+
+# dify-ai 基础请求地址
+APP_AI_DIFY_API_URL = https://api.dify.ai/v1
 
 # 正式api请求地址
 APP_API_BASE_URL=http://192.168.0.108:8081
