--- a/axios-ajax-ts/package.json
+++ b/axios-ajax-ts/package.json
@@ -32,12 +32,20 @@
 		"@types/qs": "^6.9.11",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
+		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-prettier": "^5.1.2"
 	},
-	"keywords": ["xhr", "http", "ajax", "axios", "promise", "node"],
+	"keywords": [
+		"xhr",
+		"http",
+		"ajax",
+		"axios",
+		"promise",
+		"node"
+	],
 	"author": "",
 	"license": "ISC"
 }
