--- a/main-apps/vitest-react-ts-swc-base/package.json
+++ b/main-apps/vitest-react-ts-swc-base/package.json
@@ -34,6 +34,7 @@
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.10",
 		"lodash-es": "^4.17.21",
+		"mockjs": "^1.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.21.1"
