--- a/main-apps/vitest-react-ts-swc-base/tsconfig.node.json
+++ b/main-apps/vitest-react-ts-swc-base/tsconfig.node.json
@@ -6,5 +6,5 @@
 		"allowSyntheticDefaultImports": true
 	},
 	// 说明tscnofig.node.json 是专门用于 vite.config.ts 的 TypeScript 配置文件
-	"include": ["vite.config.ts"]
+	"include": ["vite.config.ts", "utils.ts", "vitest.config.ts", "unocss.config.ts"]
 }
