--- a/sub-apps/vite-react-ts-jest-app/env/.env.development
+++ b/sub-apps/vite-react-ts-jest-app/env/.env.development
@@ -12,11 +12,17 @@ VITE_OUTPUT_DIR = /dist/dist_dev/sub-vite-react/
 
 # 公共基础路径
 BASE_URL = ./
+VITE_BASE_URL = /
 # 端口号
 VITE_PORT = 3601
 
+# APP API key
+APP_AI_DIFY_APP_KEY = app-kQVNz2gZEaj4iqalLAHt74mT
+
 # 正式api请求地址
 APP_API_BASE_URL = http://localhost:3601
+# dify-ai 基础请求地址
+APP_AI_DIFY_API_URL = https://api.dify.ai/v1
 # 权限请求地址
 APP_API_AURTH_URL = http://192.168.0.108:3680
 # Socket推送地址
