--- a/sub-apps/vite-react-ts-jest-app/env/.env.testing
+++ b/sub-apps/vite-react-ts-jest-app/env/.env.testing
@@ -15,6 +15,8 @@ VITE_PORT = 3601
 
 # 正式api请求地址
 APP_API_BASE_URL = http://192.168.0.108:8081
+# dify-ai 基础请求地址
+APP_AI_DIFY_API_URL = https://api.dify.ai/v1
 # 权限请求地址
 APP_API_AURTH_URL = http://192.168.0.108:3680
 # Socket推送地址
