--- a/sub-apps/vite-react-ts-jest-app/package.json
+++ b/sub-apps/vite-react-ts-jest-app/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"description": "vite 构建react+ts+jest pc端微应用模版",
 	"scripts": {
-		"dev": "vite --config ./viter/vite.config.ts",
+		"dev": "vite --config ./viter/vite.config.ts --debug",
 		"dev:local": "pnpm dev --mode _local",
 		"testing": "pnpm dev --mode testing",
 		"staging": "pnpm dev --mode staging",
@@ -30,10 +30,13 @@
 		"@micro-zoe/micro-app": "1.0.0-rc.3",
 		"antd": "^5.12.5",
 		"axios": "^1.6.3",
+		"axios-ajax-ts": "workspace:^",
 		"dayjs": "^1.11.10",
 		"echarts": "^5.4.3",
 		"echarts-for-react": "^3.0.2",
+		"flowise-embed-react": "^1.0.2",
 		"immer": "^10.0.3",
+		"konva": "^9.3.12",
 		"lodash-es": "^4.17.21",
 		"lru-cache": "^10.1.0",
 		"qs": "^6.11.2",
@@ -44,6 +47,7 @@
 		"react-helmet-async": "^2.0.4",
 		"react-konva": "^18.2.10",
 		"react-router-dom": "^6.21.1",
+		"react-scroll": "^1.9.0",
 		"use-immer": "^0.9.0"
 	},
 	"devDependencies": {
