--- a/sub-apps/vitest-vue3-ts-el-app/env/.env
+++ b/sub-apps/vitest-vue3-ts-el-app/env/.env
@@ -12,6 +12,14 @@ BASE_URL = /
 # 端口号
 VITE_PORT = 8082
 
+# APP ID
+APP_AI_OLLAMA_APP_ID =
+# APP API key
+APP_AI_OLLAMA_APP_KEY =
+
+# OLLAMA-ai 基础请求地址
+APP_AI_OLLAMA_API_URL = http://localhost:11434
+
 # 正式api请求地址
 APP_API_BASE_URL=http://192.168.0.108:8081
 # 权限请求地址
