--- a/sub-apps/vitest-vue3-ts-el-app/package.json
+++ b/sub-apps/vitest-vue3-ts-el-app/package.json
@@ -23,12 +23,15 @@
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.3.1",
+		"@langchain/community": "^0.2.17",
 		"axios-ajax-ts": "workspace:^",
 		"crypto-js": "^4.2.0",
 		"dayjs": "^1.11.10",
 		"element-plus": "^2.4.4",
 		"jsencrypt": "^3.3.2",
+		"langchain": "^0.2.8",
 		"lodash-es": "^4.17.21",
+		"markdown-it": "^14.1.0",
 		"mockjs": "^1.1.0",
 		"nprogress": "^0.2.0",
 		"pinia": "^2.1.7",
