--- a/sub-apps/vitest-vue3-ts-el-app/env/.env.development
+++ b/sub-apps/vitest-vue3-ts-el-app/env/.env.development
@@ -11,9 +11,12 @@ VITE_APP_MOCK = true
 VITE_OUTPUT_DIR = dist/dist_dev/sub-vite-vue3/
 
 # 公共基础路径
-BASE_URL = ./
+VITE_BASE_URL = /
 # 端口号
 VITE_PORT = 3602
+
+# OLLAMA-ai 基础请求地址
+# APP_AI_OLLAMA_API_URL = http://localhost:11434
 
 # 正式api请求地址
 APP_API_BASE_URL = http://localhost:3602
