--- a/sub-apps/vitest-vue3-ts-el-app/env/.env.testing
+++ b/sub-apps/vitest-vue3-ts-el-app/env/.env.testing
@@ -9,7 +9,7 @@ VITE_APP_MOCK = true
 VITE_OUTPUT_DIR = dist/dist_test/sub-vite-vue3/
 
 # 公共基础路径
-BASE_URL = ./
+VITE_BASE_URL = ./
 # 端口号
 VITE_PORT = 3602
 
