--- a/sub-apps/vitest-vue3-ts-el-app/env/.env.production
+++ b/sub-apps/vitest-vue3-ts-el-app/env/.env.production
@@ -11,7 +11,7 @@ VITE_APP_MOCK = false
 VITE_OUTPUT_DIR = dist/dist_prod/sub-vite-vue3/
 
 # 公共基础路径
-BASE_URL = /
+VITE_BASE_URL = /
 # 端口号
 VITE_PORT = 8082
 
