--- a/sub-apps/vitest-vue3-ts-el-app/tsconfig.app.json
+++ b/sub-apps/vitest-vue3-ts-el-app/tsconfig.app.json
@@ -173,7 +173,7 @@
 		"paths": {
 			"@/*": ["./src/*"],
 			// "#/*": ["types/*"],
-			"types/*": ["./types/*"],
+			"$types/*": ["./types/*"],
 			"tests/*": ["./tests/*"],
 			"public/*": ["./public/*"]
 		},
