fix: 修复ollama的请求问题

--- a/sub-apps/vitest-vue3-ts-el-app/env/.env.development
+++ b/sub-apps/vitest-vue3-ts-el-app/env/.env.development
@@ -16,7 +16,7 @@ VITE_BASE_URL = /
 VITE_PORT = 3602
 
 # OLLAMA-ai 基础请求地址
-# APP_AI_OLLAMA_API_URL = http://localhost:11434
+APP_AI_OLLAMA_API_URL = http://127.0.0.1:11434
 
 # 正式api请求地址
 APP_API_BASE_URL = http://localhost:3602
