--- a/main-apps/vitest-react-ts-swc-base/env/.env
+++ b/main-apps/vitest-react-ts-swc-base/env/.env
@@ -7,7 +7,7 @@ VITE_APP_PREVIEW = false
 VITE_APP_MOCK = false
 
 # 公共基础路径
-BASE_URL = /
+VITE_BASE_URL = /
 APP_BASE_ROUTER = /main-vite-react/
 # 端口号
 VITE_VITE_PORT = 8080
