--- a/main-apps/vitest-react-ts-swc-base/env/.env.development
+++ b/main-apps/vitest-react-ts-swc-base/env/.env.development
@@ -11,7 +11,7 @@ VITE_APP_MOCK = true
 VITE_OUTPUT_DIR = dist/dist_dev/main-vite-react/
 
 # 公共基础路径
-BASE_URL = ./
+VITE_BASE_URL = /
 # 端口号
 VITE_PORT = 3008
 
