--- a/main-apps/vitest-react-ts-swc-base/env/.env.testing
+++ b/main-apps/vitest-react-ts-swc-base/env/.env.testing
@@ -9,7 +9,7 @@ VITE_APP_MOCK = true
 VITE_OUTPUT_DIR = dist/dist_testing/main-vite-react/
 
 # 公共基础路径
-BASE_URL = ./
+VITE_BASE_URL = ./
 # 端口号
 VITE_PORT = 8080
 
