--- a/sub-apps/vitest-vue3-ts-el-app/env/.env
+++ b/sub-apps/vitest-vue3-ts-el-app/env/.env
@@ -17,8 +17,8 @@ APP_AI_OLLAMA_APP_ID =
 # APP API key
 APP_AI_OLLAMA_APP_KEY =
 
-# OLLAMA-ai 基础请求地址
-APP_AI_OLLAMA_API_URL = http://localhost:11434
+# OLLAMA-ai 基础请求地址 代理请求不建议用localhost
+APP_AI_OLLAMA_API_URL = http://127.0.0.1:11434
 
 # 正式api请求地址
 APP_API_BASE_URL=http://192.168.0.108:8081
